fixed UI layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ html,
 body {
     padding: 0;
     margin: 0;
+    height: 100%;
+    width: 100%;
+    position: fixed;
 }
 
 body {
@@ -17,4 +20,8 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+#__next {
+    height: 100%;
 }
